# rust-nominal

./: .copier-answers.yml  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
src/: error.rs  fsutil.rs  lib.rs  operation.rs  plan.rs  renamer.rs
