[package]
name = "nominal"
version = "0.1.0"
edition = "2021"
description = "A Rust library for batch file renaming."
repository = "https://github.com/vivienm/rust-nominal"
documentation = "https://vivienm.github.io/rust-nominal/docs/nominal/"
license = "MIT"
publish = false

[features]
ansi = ["dep:lscolors", "dep:nu-ansi-term"]
confirm = ["dep:dialoguer"]
unicode = ["dep:icu_collator"]

[dependencies]
dialoguer = { version = "0.11.0", optional = true, default-features = false }
icu_collator = { version = "1.5.0", optional = true, default-features = false, features = ["compiled_data", "std"] }
lscolors = { version = "0.17.0", optional = true, default-features = false, features = ["nu-ansi-term"] }
nu-ansi-term = { version = "0.50.1", optional = true, default-features = false }
thiserror = "1.0.63"
tracing = { version = "0.1.40", default-features = false }

[dev-dependencies]
tempfile = { version = "3.12.0", default-features = false }
