[package]
name = "nominal"
version = "0.1.0"
edition = "2024"
description = "A Rust library for batch file renaming"
repository = "https://github.com/vivienm/rust-nominal"
documentation = "https://vivienm.github.io/rust-nominal/docs/nominal/"
license = "MIT"
publish = false

[features]
ansi = ["dep:lscolors", "dep:nu-ansi-term"]
confirm = ["dep:dialoguer"]
unicode = ["dep:icu_collator", "dep:icu_provider"]

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"

[dependencies]
dialoguer = { version = "0.12.0", optional = true, default-features = false }
icu_collator = { version = "2.2.0", optional = true, default-features = false, features = ["compiled_data"] }
icu_provider = { version = "2.2.0", optional = true, default-features = false }
lscolors = { version = "0.21.0", optional = true, default-features = false, features = ["nu-ansi-term"] }
nu-ansi-term = { version = "0.50.3", optional = true, default-features = false }
same-file = "1.0.6"
thiserror = "2.0.18"
tracing = { version = "0.1.44", default-features = false }

[dev-dependencies]
tempfile = { version = "3.27.0", default-features = false }
